<resources>
    <string name="app_name">Long Drink Bar</string>
    <!-- Strings del Inicio de Sesion -->
    <string name="login_title">Iniciar Sesión</string>
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_forgot_question">¿Ha olvidado su contraseña?</string>
    <string name="login_forgot_click">Recuperar</string>
    <string name="login_button">Ingresar</string>
    <string name="login_register_button">Registrarse</string>
    <!-- Fin de Inicio de Sesión -->

    <!-- Strings del Registro de Usuario -->
    <string name="register_title">Registro de Usuario</string>
    <string name="register_indications">Ingrese los datos solicitados para su registro</string>
    <string name="register_names">Nombres</string>
    <string name="register_last_father">Apellido Paterno</string>
    <string name="register_last_mother">Apellido Materno</string>
    <string name="register_dni">DNI</string>
    <string name="register_email">Email</string>
    <string name="register_password">Contraseña</string>
    <string name="register_password_repeat">Repita Contraseña</string>
    <string name="register_button">Registrar Datos</string>
    <string name="register_back">Regresar al Inicio de sesión</string>
    <!-- Fin del Registro de Usuario -->

    <!-- Strings del listado de Cursos -->
    <string name="courses_detail_button">Detalles</string>
    <string name="courses_inscription_button">Inscripción</string>
    <!-- Fin del listado de Cursos -->

    <!-- Strings ADMINISTRATIVOS - Procesos CRUD -->
    <string name="GuardarCambios">Guardar Cambios</string>
    <string name="VisibleEstudiantes">Visible por Estudiantes</string>
    <string name="lblNombreCurso">Nombre:</string>
    <string name="lblDescCurso">Descripción:</string>
    <string name="lblDuracionCurso">Duración:</string>
    <string name="lblCostoCurso">Costo:</string>
    <string name="lblTurnoCurso">Turno:</string>
    <string name="lblFrecCurso">Frecuencia:</string>
    <string name="EliminarCurso">Eliminar Curso</string>
    <string name="EliminarAlumno">Eliminar Alumno</string>
    <string name="EliminarProfesor">Eliminar Profesor</string>
    <string name="MensajeEliminarCurso">¿Está seguro que desea eliminar el siguiente curso?</string>
    <string name="MensajeEliminarAlumno">¿Está seguro que desea eliminar el siguiente alumno?</string>
    <string name="MensajeEliminarProfesor">¿Está seguro que desea eliminar el siguiente profesor?</string>
    <string name="Cancelar">Cancelar</string>
    <string name="AlumnoHabilitado">Alumno Habilitado</string>
    <string name="DocenteHabilitado">Docente Habilitado</string>
    <string name="CambiarPassword">Cambiar Contraseña</string>
    <string name="AdvertenciaEliminar">La solicitud será procesada inmediatamente, y el curso dejará de ser visible a estudiantes. Es necesario un cierre de sesión en su cuenta para visualizar los cambios en su dashboard.</string>
    <string name="AdvertenciaEliminarDocente">La solicitud será procesada inmediatamente, y el docente sera eliminado. Es necesario un cierre de sesión en su cuenta para visualizar los cambios en su dashboard.</string>
    <string name="AdvertenciaEliminarAlumno">La solicitud será procesada inmediatamente, y el alumno sera eliminado. Es necesario un cierre de sesión en su cuenta para visualizar los cambios en su dashboard.</string>
    <!-- FIN Strings ADMINISTRATIVOS - Procesos CRUD -->

    <!-- Strings RECUPERAR CONTRASEÑA - INICIO -->
    <string name="RecuperarCredenciales">Recuperar Credenciales</string>
    <string name="TextoRecuperarCredenciales">Olvidaste tu Nombre de Usuario o Contraseña. \n\nDebes proporcionar tu DNI para realizar la solicitud de recuperación de credenciales. Una vez procesados tus datos enviaremos la información requerida para que vuelvas a utilizar nuestros servicios a tu e-mail registrado.\nEn el caso de no tener acceso a tu e-mail deberás comunicarte con administración a través de los siguientes medios: \n\nE-Mail: administracion@logndrink.pe \nCelular: 994245306</string>
    <!-- Strings RECUPERAR CONTRASEÑA - FIN -->
    <string name="wip">Trabajo en Progreso!</string>
    <string name="detalles">Detalles</string>
    <string name="inscripcion">Inscripción</string>
    <string name="editar">Editar</string>
    <string name="deshabilitar">Deshabilitar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombreAlum">Nombre Alumno</string>
    <string name="datosAlum">Espacio reservado para los datos del alumno: EMAIL, DNI, ESTADO</string>
    <string name="nombreDoc">Nombre Docente</string>
    <string name="datosDoc">Espacio reservado para los datos del docente: EMAIL, DNI, ESTADO</string>
    <string name="datosCur">Espacio reservado para los datos del curso: DURACIÓN, ACTIVO, COSTO, FRECUENCIA, TURNO</string>
    <string name="hello_blank_fragment">Fragmento en blanco!</string>

    <!-- String de inscripcion -->
    <string name="inscription_title">Ingrese los datos de su Inscripcion</string>
    <string name="inscription_select_course">Seleccione un Curso</string>
    <string name="inscription_select_time">Seleccione el horario</string>
    <string name="inscription_select_frecuency">Seleccione la frecuencia</string>
    <string name="inscription_button">Inscribirme</string>
    <!-- FIN inscripcion -->
    <!-- String MI CUENTA -->
    <string name="my_account_fullname_text">Nombre Completo</string>
</resources>