<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/logo_blanco"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/login_logo"
        android:text="@string/login_title"
        android:textColor="@color/beige_oscuro"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@+id/login"
        android:hint="@string/login_user"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginVertical="15sp"
        android:layout_marginHorizontal="35sp"
        android:padding="20sp"
        android:background="#20ffffff"
        android:drawableLeft="@drawable/baseline_person"
        android:drawablePadding="10sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginHorizontal="35sp"
        android:layout_marginVertical="15sp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/baseline_security"
        android:drawablePadding="10sp"
        android:hint="@string/login_password"
        android:padding="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/login_forgot_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="20sp"
        android:text="@string/login_forgot_question"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/login_forgot_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="40sp"
        android:layout_marginTop="20sp"
        android:text="@string/login_forgot_click"
        android:textColor="@color/light_red"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_red"
        android:text="@string/login_button"
        android:layout_below="@id/login_forgot_question"
        android:layout_marginTop="30sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_red"
        android:text="@string/login_register_button"
        android:layout_below="@id/login_button"
        android:layout_marginTop="15sp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>