<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/bg">
    
    <ImageView
        android:id="@+id/register_logo"
        android:layout_width="230sp"
        android:layout_height="100sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/logo_grande_blanco"
        android:layout_centerHorizontal="true"/>
    
    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/register_logo"
        android:text="@string/register_title"
        android:textColor="@color/beige_oscuro"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_name"
        android:layout_below="@+id/register_title"
        android:hint="@string/register_names"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:padding="10sp"
        android:background="#20ffffff"
        android:drawableLeft="@drawable/baseline_person"
        android:drawableTint="@color/light_red"
        android:drawablePadding="10sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_last_father"
        android:layout_below="@+id/register_name"
        android:hint="@string/register_last_father"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:padding="10sp"
        android:background="#20ffffff"
        android:drawableLeft="@drawable/baseline_person"
        android:drawableTint="@color/light_red"
        android:drawablePadding="10sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_last_mother"
        android:layout_below="@+id/register_last_father"
        android:hint="@string/register_last_mother"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:padding="10sp"
        android:background="#20ffffff"
        android:drawableLeft="@drawable/baseline_person"
        android:drawableTint="@color/light_red"
        android:drawablePadding="10sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_dni"
        android:layout_below="@+id/register_last_mother"
        android:hint="@string/register_dni"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:padding="10sp"
        android:background="#20ffffff"
        android:drawableLeft="@drawable/baseline_dni"
        android:drawableTint="@color/light_red"
        android:drawablePadding="10sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_email"
        android:layout_below="@+id/register_dni"
        android:hint="@string/register_email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:padding="10sp"
        android:background="#20ffffff"
        android:drawableLeft="@drawable/baseline_email"
        android:drawableTint="@color/light_red"
        android:drawablePadding="10sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_password"
        android:layout_below="@+id/register_email"
        android:hint="@string/register_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:padding="10sp"
        android:background="#20ffffff"
        android:drawableLeft="@drawable/baseline_security"
        android:drawableTint="@color/light_red"
        android:drawablePadding="10sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_password_repeat"
        android:layout_below="@+id/register_password"
        android:hint="@string/register_password_repeat"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="15sp"
        android:layout_marginHorizontal="35sp"
        android:padding="10sp"
        android:background="#20ffffff"
        android:drawableLeft="@drawable/baseline_security"
        android:drawableTint="@color/light_red"
        android:drawablePadding="10sp"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_red"
        android:text="@string/register_button"
        android:layout_below="@id/register_password_repeat"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/register_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/register_button"
        android:text="@string/register_back"
        android:textColor="@color/light_red"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>