<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordRecovery">

    <TextView
        android:id="@+id/lbl_pr_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TextoRecuperarCredenciales"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/lbl_pr_dni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_dni" />

    <EditText
        android:id="@+id/txt_pr_dni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

    <Button
        android:id="@+id/btn_pr_recover"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/RecuperarCredenciales" />
    <Button
        android:id="@+id/btn_pr_cancel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:backgroundTint="@color/light_red"
        android:text="@string/Cancelar" />
</LinearLayout>