<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdmCourseDeleteActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txt_deleteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textAlignment="center"
        android:textColor="@color/light_red"
        android:text="@string/MensajeEliminarCurso" />

    <ImageView
        android:id="@+id/iv_deleteCourse"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_courseData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="Reemplazar, datos del curso..." />

    <Button
        android:id="@+id/btnDeleteCourse"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/EliminarCurso"
        android:backgroundTint="@color/dark_blue"
        />

    <Button
        android:id="@+id/btnGoBackCourse"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Cancelar"
        android:backgroundTint="@color/light_red"
        />
</LinearLayout>